--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -22,97 +22,56 @@
         android:id="@+id/profil_imageView"
         android:layout_width="88dp"
         android:layout_height="91dp"
-        android:layout_marginBottom="512dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profil_judul"
-        app:layout_constraintVertical_bias="0.27"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/profil_labelEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Email"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.132"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profil_imageView" />
-
-    <TextView
         android:id="@+id/profil_labelViewEmail"
-        android:layout_width="311dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="4dp"
-        android:paddingStart="16dp"
-        android:textColor="@color/black"
-        android:text="TextView"
+        android:layout_width="208dp"
+        android:layout_height="24dp"
         android:gravity="center_vertical"
-        android:textSize="14dp"
-        android:background="@drawable/rounded_edittext"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profil_labelEmail" />
-
-    <TextView
-        android:id="@+id/profil_labelNama"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Nama Lengkap"
+        android:paddingStart="2dp"
+        android:text="mujaerabdul"
         android:textColor="@color/black"
-        android:textStyle="bold"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.167"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profil_labelViewEmail" />
-
-    <TextView
-        android:id="@+id/profil_labelViewNama"
-        android:layout_width="309dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="4dp"
-        android:text="TextView"
-        android:paddingStart="16dp"
-        android:gravity="center_vertical"
-        android:textColor="@color/black"
-        android:background="@drawable/rounded_edittext"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profil_labelNama" />
-
-    <TextView
-        android:id="@+id/profil_labelUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Username"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.144"
+        app:layout_constraintHorizontal_bias="0.768"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profil_labelViewNama" />
 
     <TextView
-        android:id="@+id/profil_labelViewUsername"
-        android:layout_width="309dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="4dp"
-        android:text="TextView"
-        android:paddingStart="16dp"
+        android:id="@+id/profil_labelViewNama"
+        android:layout_width="208dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="32dp"
         android:gravity="center_vertical"
+        android:paddingStart="2dp"
+        android:text="Abdul Rasyid Mujaer"
         android:textColor="@color/black"
-        android:background="@drawable/rounded_edittext"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.768"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profil_labelUsername" />
+        app:layout_constraintTop_toBottomOf="@+id/profil_judul" />
+
+    <TextView
+        android:id="@+id/profil_labelViewUsername"
+        android:layout_width="208dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="12dp"
+        android:gravity="center_vertical"
+        android:paddingStart="2dp"
+        android:text="mujaer@gmail.com"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.768"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profil_labelViewEmail" />
 
     <Button
         android:id="@+id/profil_tombolEdit"
@@ -155,74 +114,55 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/button_buku_favorit"
-        android:layout_width="366dp"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/button_background"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?attr/selectableItemBackground"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view">
-
-        <ImageView
-            android:id="@+id/icon_buku"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:contentDescription="Ikon Buku"
-            android:src="@drawable/icon_buku"
-            app:tint="@color/white" />
-
-        <TextView
-            android:id="@+id/text_buku_favorit"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_weight="1"
-            android:text="Buku Favorit"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/icon_panah_kanan"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:contentDescription="Ikon Panah Kanan"
-            android:src="@drawable/ic_arrow_right"
-            app:tint="@color/white" />
-    </LinearLayout>
-
     <View
         android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="7dp"
         android:background="@color/primary"
+        app:layout_constraintBottom_toTopOf="@+id/profil_tombolKeluar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.526"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_buku_favorit" />
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
 
     <Button
         android:id="@+id/profil_tombolKeluar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="#D30000"
         android:text="Keluar Akun"
         android:textAllCaps="false"
+        app:layout_constraintBottom_toTopOf="@+id/navbar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view2" />
+        app:layout_constraintTop_toBottomOf="@+id/view2"
+        app:layout_constraintVertical_bias="0.6" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="410dp"
+        android:layout_height="230dp"
+        app:layout_constraintBottom_toBottomOf="@+id/view2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profil_labelBukuFavorit" />
+
+    <TextView
+        android:id="@+id/profil_labelBukuFavorit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
+        android:text="Buku Favorit"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
