--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -22,10 +22,14 @@
         android:id="@+id/profil_imageView"
         android:layout_width="88dp"
         android:layout_height="91dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="48dp"
         android:layout_marginTop="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/profil_tombolEdit"
+        app:layout_constraintEnd_toStartOf="@+id/profil_labelViewEmail"
+        app:layout_constraintHorizontal_bias="0.09"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profil_judul"
+        app:layout_constraintVertical_bias="0.0"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
