--- a/app/src/main/res/layout/activity_beranda.xml
+++ b/app/src/main/res/layout/activity_beranda.xml
@@ -8,7 +8,6 @@
     android:background="@drawable/background"
     tools:context=".Beranda">
 
-
     <!-- Navbar -->
     <com.example.gambarhub.NavbarLogic
         android:id="@+id/navbar"
@@ -19,6 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <!-- Label Selamat Datang -->
     <TextView
         android:id="@+id/beranda_labelusername"
         android:layout_width="0dp"
@@ -26,7 +26,7 @@
         android:background="@color/primary"
         android:gravity="center_vertical"
         android:paddingStart="16dp"
-        android:text="TextView"
+        android:text="Selamat datang ke PerpusHub"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -34,33 +34,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/search_bar"
+    <!-- RecyclerView -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listbuku"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/rounded_edittext"
-        android:iconifiedByDefault="false"
-        android:focusable="true"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:queryHint="Cari sesuatu..."
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:padding="8dp"
+        app:layout_constraintBottom_toTopOf="@id/navbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/beranda_labelusername" />
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listbuku"
-        android:layout_width="412dp"
-        android:layout_height="524dp"
-        android:layout_marginBottom="80dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_bar"
-        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
