--- a/app/src/main/res/layout/item_buku.xml
+++ b/app/src/main/res/layout/item_buku.xml
@@ -1,47 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="10dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp">
 
+    <!-- Isi Card -->
+    <androidx.appcompat.widget.LinearLayoutCompat
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="10dp">
+
+    <!-- Gambar Cover Buku -->
+    <ImageView
+    android:id="@+id/book_cover"
+    android:layout_width="161dp"
+    android:layout_height="243dp"
+    android:scaleType="centerCrop" />
+
+    <!-- Informasi Buku -->
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+    android:layout_width="0dp"
+    android:layout_height="match_parent"
+    android:layout_weight="1"
+    android:orientation="vertical"
+    android:paddingStart="8dp">
+
+    <TextView
+        android:id="@+id/book_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="8dp">
+        android:text="Judul Buku"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/book_cover"
-            android:layout_width="80dp"
-            android:layout_height="120dp"
-            android:scaleType="centerCrop" />
+    <TextView
+        android:id="@+id/book_author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="Penulis"
+        android:textColor="@color/black"
+        android:textSize="14sp" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingStart="8dp">
-
-            <TextView
-                android:id="@+id/book_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Judul Buku"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/book_author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text="Penulis"
-                android:textSize="14sp"
-                android:paddingTop="4dp" />
-        </LinearLayout>
-    </LinearLayout>
-
-
+    <TextView
+        android:id="@+id/book_desc"
+        android:layout_width="201dp"
+        android:layout_height="192dp"
+        android:layout_marginTop="4dp"
+        android:text="Detail buku"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:maxLines="5"
+        android:ellipsize="end"/>
+</LinearLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.cardview.widget.CardView>
